fix overflow for ie11

--- a/components/modal/modal.scss
+++ b/components/modal/modal.scss
@@ -35,6 +35,7 @@
   max-height: 90%;
   max-width: 720px;
   opacity: 0;
+  overflow: auto;
   position: absolute;
   top: 50%;
   transform: translate(-50%, 10%);
